<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.statusbar.notification.row.NotificationInfo xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:sysui="http://schemas.android.com/apk/res-auto" xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/notification_guts" android:clickable="true" android:clipChildren="false" android:clipToPadding="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="0x10501b7">
    <LinearLayout android:gravity="center_vertical" android:id="@+id/header" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="@dimen/notification_guts_conversation_header_height">
        <ImageView android:id="@+id/pkg_icon" android:layout_width="@dimen/notification_guts_conversation_icon_size" android:layout_height="@dimen/notification_guts_conversation_icon_size" android:layout_centerVertical="true" android:layout_marginEnd="15dp" android:layout_alignParentStart="true"/>
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@+id/names" android:layout_width="0dp" android:layout_height="wrap_content" android:minHeight="@dimen/notification_guts_conversation_icon_size" android:layout_weight="1" android:layout_centerVertical="true" android:layout_toEndOf="@+id/pkg_icon" android:layout_alignStart="@+id/mute" android:layout_alignEnd="@+id/pkg_icon">
            <TextView android:id="@+id/channel_name" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/TextAppearance.NotificationImportanceChannel"/>
            <LinearLayout android:gravity="start" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:ellipsize="end" android:id="@+id/pkg_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" style="@style/TextAppearance.NotificationImportanceChannelGroup"/>
                <TextView android:id="@+id/group_divider" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@android:string/sms_short_code_confirm_allow" android:layout_centerVertical="true" android:layout_marginStart="2dp" android:layout_marginEnd="2dp" style="@style/TextAppearance.NotificationImportanceHeader"/>
                <TextView android:id="@+id/group_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" style="@style/TextAppearance.NotificationImportanceChannel"/>
            </LinearLayout>
            <TextView android:ellipsize="end" android:id="@+id/delegate_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/notification_delegate_header" android:maxLines="1" android:layout_centerVertical="true" android:layout_marginStart="2dp" android:layout_marginEnd="2dp" style="@style/TextAppearance.NotificationImportanceHeader"/>
        </LinearLayout>
        <ImageButton android:id="@+id/app_settings" android:background="@drawable/ripple_drawable" android:visibility="gone" android:layout_width="@dimen/notification_importance_toggle_size" android:layout_height="@dimen/notification_importance_toggle_size" android:src="@drawable/ic_info" android:tint="@color/notification_guts_link_icon_tint" android:layout_centerVertical="true" android:contentDescription="@string/notification_app_settings" android:layout_toStartOf="@+id/info"/>
        <ImageButton android:id="@+id/info" android:background="@drawable/ripple_drawable" android:layout_width="@dimen/notification_importance_toggle_size" android:layout_height="@dimen/notification_importance_toggle_size" android:src="@drawable/ic_settings" android:tint="@color/notification_guts_link_icon_tint" android:layout_centerVertical="true" android:contentDescription="@string/notification_more_settings" android:layout_alignParentEnd="true"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/inline_controls" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/notification_guts_option_vertical_padding" android:paddingEnd="0x10501b6">
        <TextView android:id="@+id/non_configurable_text" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/notification_unblockable_desc" style="@android:style/Animation.DeviceDefault.Dialog"/>
        <TextView android:id="@+id/non_configurable_multichannel_text" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/notification_multichannel_desc" style="@android:style/Animation.DeviceDefault.Dialog"/>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/interruptiveness_settings" android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.android.systemui.statusbar.notification.row.ButtonLinearLayout android:orientation="vertical" android:id="@+id/alert" android:background="@drawable/notification_guts_priority_button_bg" android:padding="@dimen/notification_importance_button_padding" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <ImageView android:id="@+id/alert_icon" android:background="@android:color/transparent" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_notifications_alert" android:tint="@color/notification_guts_priority_contents"/>
                    <TextView android:textAppearance="@style/TextAppearance.NotificationImportanceButton" android:ellipsize="end" android:id="@+id/alert_label" android:focusable="false" android:clickable="false" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/notification_alert_title" android:maxLines="1" android:layout_weight="1" android:layout_marginStart="@dimen/notification_importance_drawable_padding"/>
                </LinearLayout>
                <TextView android:textAppearance="@style/TextAppearance.NotificationImportanceDetail" android:ellipsize="end" android:id="@+id/alert_summary" android:focusable="false" android:visibility="gone" android:clickable="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/notification_importance_button_description_top_margin" android:text="@string/notification_channel_summary_default" android:maxLines="2"/>
            </com.android.systemui.statusbar.notification.row.ButtonLinearLayout>
            <com.android.systemui.statusbar.notification.row.ButtonLinearLayout android:orientation="vertical" android:id="@+id/silence" android:background="@drawable/notification_guts_priority_button_bg" android:padding="@dimen/notification_importance_button_padding" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/notification_importance_button_separation">
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <ImageView android:layout_gravity="center" android:id="@+id/silence_icon" android:background="@android:color/transparent" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_notifications_silence" android:tint="@color/notification_guts_priority_contents"/>
                    <TextView android:textAppearance="@style/TextAppearance.NotificationImportanceButton" android:ellipsize="end" android:id="@+id/silence_label" android:focusable="false" android:clickable="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/notification_silence_title" android:maxLines="1" android:layout_marginStart="@dimen/notification_importance_drawable_padding" android:layout_toEndOf="@+id/silence_icon"/>
                </LinearLayout>
                <TextView android:textAppearance="@style/TextAppearance.NotificationImportanceDetail" android:ellipsize="end" android:id="@+id/silence_summary" android:focusable="false" android:visibility="gone" android:clickable="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/notification_importance_button_description_top_margin" android:text="@string/notification_channel_summary_low" android:maxLines="2"/>
            </com.android.systemui.statusbar.notification.row.ButtonLinearLayout>
        </LinearLayout>
        <RelativeLayout android:gravity="center_vertical" android:id="@+id/bottom_buttons" android:layout_width="match_parent" android:layout_height="60dp" android:paddingStart="4dp" android:paddingEnd="4dp">
            <TextView android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/turn_off_notifications" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="200dp" android:minWidth="@dimen/notification_importance_toggle_size" android:minHeight="@dimen/notification_importance_toggle_size" android:text="@string/inline_turn_off_notifications" android:layout_alignParentStart="true" style="@style/TextAppearance.NotificationInfo.Button"/>
            <TextView android:gravity="right|center_vertical|center_horizontal|center|end" android:id="@+id/done" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="125dp" android:minWidth="@dimen/notification_importance_toggle_size" android:minHeight="@dimen/notification_importance_toggle_size" android:text="@string/inline_ok_button" android:layout_alignParentEnd="true" style="@style/TextAppearance.NotificationInfo.Button"/>
        </RelativeLayout>
    </LinearLayout>
</com.android.systemui.statusbar.notification.row.NotificationInfo>
