<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.statusbar.notification.row.NotificationConversationInfo xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:sysui="http://schemas.android.com/apk/res-auto" xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/notification_guts" android:background="@color/notification_material_background_color" android:clickable="true" android:clipChildren="false" android:clipToPadding="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="0x10501b7">
    <LinearLayout android:gravity="center_vertical" android:id="@+id/header" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="@dimen/notification_guts_conversation_header_height">
        <ImageView android:id="@+id/conversation_icon" android:layout_width="@dimen/notification_guts_conversation_icon_size" android:layout_height="@dimen/notification_guts_conversation_icon_size" android:layout_centerVertical="true" android:layout_marginEnd="15dp" android:layout_alignParentStart="true"/>
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@+id/names" android:layout_width="0dp" android:layout_height="wrap_content" android:minHeight="@dimen/notification_guts_conversation_icon_size" android:layout_weight="1" android:layout_centerVertical="true" android:layout_toEndOf="@+id/conversation_icon" android:layout_alignStart="@+id/mute" android:layout_alignEnd="@+id/conversation_icon">
            <LinearLayout android:gravity="start" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:id="@+id/parent_channel_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" style="@style/TextAppearance.NotificationImportanceChannel"/>
                <TextView android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@android:string/sms_short_code_confirm_allow" android:layout_centerVertical="true" android:layout_marginStart="2dp" android:layout_marginEnd="2dp" style="@style/TextAppearance.NotificationImportanceHeader"/>
                <TextView android:id="@+id/name" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" style="@style/TextAppearance.NotificationImportanceChannel"/>
            </LinearLayout>
            <LinearLayout android:gravity="start" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:ellipsize="end" android:id="@+id/pkg_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" style="@style/TextAppearance.NotificationImportanceChannelGroup"/>
                <TextView android:id="@+id/group_divider" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@android:string/sms_short_code_confirm_allow" android:layout_centerVertical="true" android:layout_marginStart="2dp" android:layout_marginEnd="2dp" style="@style/TextAppearance.NotificationImportanceHeader"/>
                <TextView android:id="@+id/group_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" style="@style/TextAppearance.NotificationImportanceChannel"/>
            </LinearLayout>
            <TextView android:ellipsize="end" android:id="@+id/delegate_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/notification_delegate_header" android:maxLines="1" android:layout_centerVertical="true" android:layout_marginStart="2dp" android:layout_marginEnd="2dp" style="@style/TextAppearance.NotificationImportanceHeader"/>
        </LinearLayout>
        <ImageButton android:id="@+id/mute" android:background="@drawable/ripple_drawable" android:layout_width="@dimen/notification_importance_toggle_size" android:layout_height="@dimen/notification_importance_toggle_size" android:tint="@color/notification_guts_link_icon_tint" android:layout_centerVertical="true" android:layout_toStartOf="@+id/fave"/>
        <ImageButton android:id="@+id/fave" android:background="@drawable/ripple_drawable" android:layout_width="@dimen/notification_importance_toggle_size" android:layout_height="@dimen/notification_importance_toggle_size" android:tint="@color/notification_guts_link_icon_tint" android:layout_centerVertical="true" android:layout_alignParentEnd="true"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/actions" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginEnd="0x10501b6">
        <View android:background="@color/GM2_grey_300" android:layout_width="match_parent" android:layout_height="0.5dp"/>
        <Button android:gravity="left|center_vertical|center_horizontal|center" android:id="@+id/snooze" android:layout_width="match_parent" android:layout_height="@dimen/notification_guts_conversation_action_height" android:text="@string/notification_menu_snooze_action" android:drawablePadding="@dimen/notification_guts_conversation_action_text_padding_start" android:drawableStart="@drawable/ic_snooze" android:drawableTint="@color/notification_guts_link_icon_tint" style="?android:attr/borderlessButtonStyle"/>
        <View android:background="@color/GM2_grey_300" android:layout_width="match_parent" android:layout_height="0.5dp"/>
        <Button android:gravity="left|center_vertical|center_horizontal|center" android:id="@+id/bubble" android:layout_width="match_parent" android:layout_height="@dimen/notification_guts_conversation_action_height" android:text="@string/notification_conversation_favorite" android:drawablePadding="@dimen/notification_guts_conversation_action_text_padding_start" android:drawableStart="@drawable/ic_create_bubble" android:drawableTint="@color/notification_guts_link_icon_tint" style="?android:attr/borderlessButtonStyle"/>
        <View android:background="@color/GM2_grey_300" android:layout_width="match_parent" android:layout_height="0.5dp"/>
        <Button android:gravity="left|center_vertical|center_horizontal|center" android:id="@+id/home" android:layout_width="match_parent" android:layout_height="@dimen/notification_guts_conversation_action_height" android:text="@string/notification_conversation_home_screen" android:drawablePadding="@dimen/notification_guts_conversation_action_text_padding_start" android:drawableStart="@drawable/ic_add_to_home" android:drawableTint="@color/notification_guts_link_icon_tint" style="?android:attr/borderlessButtonStyle"/>
        <View android:background="@color/GM2_grey_300" android:layout_width="match_parent" android:layout_height="0.5dp"/>
        <Button android:gravity="left|center_vertical|center_horizontal|center" android:id="@+id/info" android:layout_width="match_parent" android:layout_height="@dimen/notification_guts_conversation_action_height" android:text="@string/notification_menu_settings_action" android:drawablePadding="@dimen/notification_guts_conversation_action_text_padding_start" android:drawableStart="@drawable/ic_settings" android:drawableTint="@color/notification_guts_link_icon_tint" style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>
</com.android.systemui.statusbar.notification.row.NotificationConversationInfo>
